# polyverse-agent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  config.example.toml  instruct.txt  instruct.txt.sample  settings.json  sol  test_surreal.rs  test_v3.rs  test_v3_record.rs
.cargo/: config.toml
.fastembed_cache/models--Qdrant--all-MiniLM-L6-v2-onnx/refs/: main
apps/agent/: Cargo.toml
apps/agent/src/: main.rs
apps/cockpit/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/cockpit-web/: .env.example  README.md  package.json
apps/cockpit-web/src/app/: globals.css  page.tsx
apps/cockpit-web/src/components/: dashboard.tsx
apps/cockpit-web/src/lib/: types.ts
apps/cockpit/src/app/: layout.tsx
apps/cockpit/src/components/: dashboard.tsx
apps/wiki/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/wiki/src/app/: globals.css  layout.tsx
apps/wiki/src/components/: doc-content.tsx  sidebar-layout.tsx  sidebar.tsx  wiki-shell.tsx
apps/wiki/src/lib/: docs.ts  markdown.tsx  paths.ts
config/: agent_profile.toml.sample  prompt_registry.json  state_prompt.json  state_schema.v0.json
crates/pa-agent/: Cargo.toml
crates/pa-agent/src/: main.rs
crates/pa-cockpit-api/: Cargo.toml
crates/pa-cockpit-api/src/: lib.rs
crates/pa-cognitive/: Cargo.toml
crates/pa-cognitive/src/: affect_evaluator.rs  context.rs  dialogue_engine.rs  dialogue_tools.rs  lib.rs  llm.rs  social_context.rs  system1.rs
crates/pa-core/: Cargo.toml
crates/pa-core/src/: agent_profile.rs  biology.rs  event.rs  lib.rs  prompt_registry.rs  state.rs  worker.rs
crates/pa-mcp/: Cargo.toml
crates/pa-mcp/src/: config.rs  lib.rs
crates/pa-mcp/src/registry/: mod.rs
crates/pa-mcp/src/server/: mod.rs
crates/pa-mcp/src/tools/read/: social_get_affect_context.rs  social_get_dialogue_summary.rs
crates/pa-mcp/tests/: http_contract.rs  server.rs  tools.rs
crates/pa-memory/: Cargo.toml
crates/pa-memory/src/: compressor.rs  embedder.rs  episodic.rs  graph.rs  lib.rs  short_term.rs  store.rs  types.rs  worker.rs
crates/pa-memory/tests/: dump_graph.rs
crates/pa-runtime/: Cargo.toml
crates/pa-runtime/src/: coordinator.rs  event_bus.rs  lib.rs  supervisor.rs
crates/pa-sensory/: Cargo.toml
crates/pa-sensory/src/: buffer.rs  discord.rs  lib.rs  platform.rs  telegram.rs
crates/pa-sensory/src/discord/: bot.rs  mod.rs  ws_server.rs
crates/pa-sensory/src/discord/nodejs-selfbot/: index.js  package-lock.json  package.json
crates/pa-state/: Cargo.toml
crates/pa-state/src/: lib.rs
docs/: agent-state-space-dimensions.md  cockpit-local.md  social-tree-architecture-v1.md  social-tree-query-mcp-architecture-v1.md  truth-kgraph-v1.md  workspace-layout.md
docs/dev-notes/: README.md  cockpit-local.md  graph-memory.md  workspace-layout.md
docs/wiki/: README.md
docs/wiki/architecture/: README.md  runtime-flow.md
docs/wiki/architecture/agent-domain/: README.md  agent-biology.md  state-derivation.md  state-system.md
docs/wiki/architecture/cognitive-memory/: README.md  cognitive-graph.md  cognitive-processing.md  data-and-storage.md  episodic-store.md  memory-stack.md  short-term.md  social-query-model.md
docs/wiki/architecture/core-runtime/: README.md  event-model.md  runtime-flow.md  (+2 more)
docs/wiki/local-interfaces/: README.md  cockpit-api.md  mcp-server.md
docs/wiki/operations/: README.md
docs/wiki/overview/: README.md  getting-started.md  repository-map.md
docs/wiki/reference/: README.md  configuration.md  dialogue-mcp-tools.md  events-and-intents.md  state-schema-dimensions.md  testing.md
libs/cognitive/: Cargo.toml
libs/cognitive/src/: affect_evaluator.rs  context.rs  dialogue_engine.rs  dialogue_tools.rs  social_context.rs
libs/kernel/: Cargo.toml
libs/kernel/src/: agent_profile.rs  event.rs  worker.rs
libs/memory/: Cargo.toml  test_lancedb.rs
libs/memory/src/: compressor.rs  embedder.rs  graph.rs  short_term.rs  store.rs  types.rs  worker.rs
libs/memory/test_surreal_take/: Cargo.toml
libs/memory/tests/: dump_graph.rs
libs/runtime/: Cargo.toml
libs/runtime/src/: coordinator.rs  event_bus.rs  lib.rs  supervisor.rs
libs/runtime/tests/: runtime_flow.rs
libs/sensory/: Cargo.toml
libs/sensory/src/: buffer.rs  lib.rs  platform.rs  telegram.rs
libs/sensory/src/discord/: bot.rs  mod.rs  ws_server.rs
libs/sensory/src/relay/: client.rs  mod.rs  protocol.rs  server.rs
libs/state/: Cargo.toml
libs/state/src/: lib.rs
prompts/affect_evaluator/: base_instruction.txt  base_instruction.txt.sample  composite_header.txt  composite_header.txt.sample  user_extract.txt.sample
prompts/context/: first_msg_known.txt  first_msg_known.txt.sample  first_msg_unknown.txt.sample  has_history.txt  has_history.txt.sample  memory_header.txt  memory_header.txt.sample  memory_item.txt.sample  social_default.txt.sample  social_known.txt.sample  state_legend.txt.sample  state_snapshot.txt
prompts/dialogue_engine/: fallback.txt.sample  tool_policy.txt
prompts/llm/: fallback.txt.sample
prompts/memory/: chatlog_wrapper.txt  compressor_diary_cmd.txt.sample  compressor_time_block.txt  compressor_time_block.txt.sample
prompts/persona/: base.txt.sample  fallback_short.txt.sample
prompts/system1/: base_instruction.txt.sample
scripts/: protoc-wrapper.sh
services/cockpit-api/: Cargo.toml
services/cockpit-api/src/: lib.rs
services/mcp/: Cargo.toml
services/mcp/src/: config.rs  dispatch.rs  lib.rs  provider.rs  stdio.rs
services/mcp/src/observability/: mod.rs
services/mcp/src/registry/: mod.rs
services/mcp/src/server/: mod.rs
services/mcp/src/tools/read/: social_get_affect_context.rs  social_get_dialogue_summary.rs
services/mcp/tests/: http_contract.rs  server.rs  stdio.rs  tools.rs
testing/integration-tests/: Cargo.toml
testing/integration-tests/src/: lib.rs
testing/integration-tests/tests/: dialogue_worker_smoke.rs  runtime_supervisor_mcp.rs  runtime_wiring.rs  social_mcp_roundtrip.rs  web_tools_mcp_roundtrip.rs
testing/test-support/: Cargo.toml
testing/test-support/src/: lib.rs
(+13 files in other folders)
