[workspace]
resolver = "2"
members = [
    "crates/pa-core",
    "crates/pa-runtime",
    "crates/pa-sensory",
    "crates/pa-cognitive",
    "crates/pa-memory",
    "crates/pa-agent",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Polyverse Team"]
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Discord
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }

# Telegram
teloxide = { version = "0.13", features = ["macros"] }

# Env
dotenvy = "0.15"

# ─── Release Profiles ────────────────────────────────────────

# `cargo run --release` / `cargo build --release`
# Maximum performance for production use.
[profile.release]
opt-level = 3         # full optimization
lto = "thin"          # cross-crate optimization (faster than "fat", better than false)
codegen-units = 1     # single codegen unit — best inlining/optimization
panic = "abort"       # no unwinding overhead; smaller binary
strip = "symbols"     # strip debug symbols for smaller binary

# `cargo build --profile fast-release`
# Quick optimized build for development — skips LTO for faster compile times.
[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 16
strip = "none"
