[workspace]
resolver = "2"
members = [
    "libs/kernel",
    "libs/runtime",
    "libs/sensory",
    "libs/cognitive",
    "libs/memory",
    "libs/state",
    "services/cockpit-api",
    "services/mcp",
    "apps/agent",
    "testing/test-support",
    "testing/integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Polyverse Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

anyhow = "1"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }

teloxide = { version = "0.13", features = ["macros"] }

dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 16
strip = "none"
