[package]
name = "agent"
description = "Main binary for Polyverse Agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "polyverse-agent"
path = "src/main.rs"

[dependencies]
kernel = { path = "../../libs/kernel" }
runtime = { path = "../../libs/runtime" }
sensory = { path = "../../libs/sensory" }
cognitive = { path = "../../libs/cognitive" }
memory = { path = "../../libs/memory" }
state = { path = "../../libs/state" }
cockpit-api = { path = "../../services/cockpit-api" }
mcp = { path = "../../services/mcp" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
mimalloc = "0.1.48"
