[package]
name = "pa-agent"
description = "Main binary for Polyverse Agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "polyverse-agent"
path = "src/main.rs"

[dependencies]
pa-core = { path = "../pa-core" }
pa-runtime = { path = "../pa-runtime" }
pa-sensory = { path = "../pa-sensory" }
pa-cognitive = { path = "../pa-cognitive" }
pa-memory = { path = "../pa-memory" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
