[package]
name = "pa-cockpit-api"
description = "Local cockpit API worker for Polyverse Agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.8.8"
tower-http = { version = "0.6.6", features = ["cors"] }
sysinfo = "0.37.2"

pa-core = { path = "../pa-core" }
pa-memory = { path = "../pa-memory" }
pa-state = { path = "../pa-state" }
