[package]
name = "pa-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
pa-core = { path = "../pa-core" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
lancedb = "0.26.2"
ort = "2.0.0-rc.11"
arrow = "57.3.0"
fastembed = "5.11.0"
futures = "0.3.32"
reqwest.workspace = true
surrealdb = { version = "3.0.0", features = ["kv-mem", "kv-surrealkv"] }
