[package]
name = "pa-state"
description = "State schema and local state store for cockpit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
pa-core = { path = "../pa-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sysinfo = "0.37.2"
