[package]
name = "cognitive"
description = "Cognitive layer — LLM integration for Polyverse Agent"
version.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../kernel" }
memory = { path = "../memory" }
state = { path = "../state" }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
futures = "0.3.32"

[dev-dependencies]
axum = "0.8.8"
