[package]
name = "sensory"
description = "Shared sensory buffer, platform adapter trait, and UDS relay for Polyverse Agent"
version.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../kernel" }
tokio = { workspace = true, features = ["net"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
