[package]
name = "state"
description = "State schema and local state store for cockpit"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
kernel = { path = "../kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sysinfo = "0.37.2"
