[package]
name = "cockpit-api"
description = "Local cockpit API worker for Polyverse Agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.8.8"
tower-http = { version = "0.6.6", features = ["cors"] }
sysinfo = "0.37.2"

kernel = { path = "../../libs/kernel" }
memory = { path = "../../libs/memory" }
state = { path = "../../libs/state" }
