[package]
name = "mcp"
description = "MCP read-tool worker for Polyverse Agent"
version.workspace = true
edition.workspace = true

[dependencies]
kernel = { path = "../../libs/kernel" }
cognitive = { path = "../../libs/cognitive" }
memory = { path = "../../libs/memory" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
axum = "0.8.8"

[dev-dependencies]
tower = "0.5.2"
futures = "0.3"
anyhow = { workspace = true }
serde_json = { workspace = true }
