[package]
name = "test-support"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = "0.8.8"
chrono = { workspace = true }
cognitive = { path = "../../libs/cognitive" }
kernel = { path = "../../libs/kernel" }
memory = { path = "../../libs/memory" }
mcp = { path = "../../services/mcp" }
state = { path = "../../libs/state" }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
